--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,45 @@
     transform: rotate(360deg);
   }
 }
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  background-color: #000000;
+  color: #ffffff;
+  opacity: 60%;
+}
+
+.nav-bar ul {
+  list-style: none;
+  display: flex;
+}
+
+.nav-bar ul li {
+  padding-left: 1rem;
+}
+
+.nav-bar a {
+  text-decoration: none;
+  color: #ffffff;
+}
+.nav-bar a:hover {
+  text-decoration: underline;
+}
+
+.footer {
+  display: flex;
+  padding: 40px;
+  font-size: 14px;
+  color: #000000;
+  justify-content: center;
+}
+
+.red {
+  color: red;
+}
+
+.blue {
+  color: blue;
+}
