--- a/frontend/src/pages/Schedule.css
+++ b/frontend/src/pages/Schedule.css
@@ -1,18 +1,3 @@
-thead,
-tfoot {
-  background-color: #3f87a6;
-  color: #fff;
-}
-
-tbody {
-  background-color: #e4f0f5;
-}
-
-caption {
-  padding: 10px;
-  caption-side: bottom;
-}
-
 table {
   border-collapse: collapse;
   border: 2px solid rgb(200, 200, 200);
@@ -24,27 +9,91 @@ table {
   margin-right: auto;
 }
 
-td,
-th {
-  border: 1px solid rgb(190, 190, 190);
-  padding: 15px 10px;
-}
-
-td {
+h2 {
+  font-size: 66px;
+  font-weight: bold;
+  color: #040608;
   text-align: center;
+  margin-bottom: 10px;
+  border-bottom: 2px solid #ccc;
+  padding-bottom: 10px;
+  font-family: 'Arial', sans-serif;
 }
 
-/* Apply consistent styling to table body cells */
-tbody td,
-thead th {
-  padding: 15px 10px; /* Adjust padding as needed */
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
 
+/* Stilizare de bază pentru butoane */
+.year-button {
+  padding: 12px 24px;
+  font-size: 16px;
+  border: none;
+  background-color: #f5f5f5;
+  color: #333;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s, transform 0.2s;
+  margin: 5px;
+  border-radius: 8px;
+}
+
+.year-button:hover {
+  background-color: #e0e0e0;
+}
+
+/* Stilizare pentru butoanele selectate */
+.year-button.selected {
+  background-color: #81d7da;
+  color: #fff;
+  transform: scale(1.05);
+  box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+*/
+
+.schedule {
+  width: 100%;
+  border-collapse: collapse;
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.schedule th,
+.schedule td {
+  border: 1px solid #ddd;
+  padding: 12px;
   text-align: center;
-  white-space: nowrap; /* Prevent text from wrapping */
-  overflow: hidden; /* Hide overflowing text */
-  text-overflow: ellipsis; /* Show ellipsis (...) for long text */
+  font-size: 20px;
 }
-select {
-  max-width: 100px; /* Adjust the height as needed */
-  white-space: normal;
+
+.schedule tbody{
+  background-color: #f1efef;
+}
+.schedule th {
+  background-color: #b5ba4b;
+  color: #fff;
+  font-weight: bold;
+}
+
+.schedule td div {
+  margin-bottom: 5px;
+}
+
+.schedule button {
+  background-color: #c55d68;
+  color: #fff;
+  border: none;
+  padding: 6px 12px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  border-radius: 10px;
+
+}
+
+.schedule button:hover {
+  background-color: #981c29;
 }
