--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,16 +2,14 @@
   text-align: center;
 }
 
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-bar {
+  
 }
 
 .App-link {
@@ -20,12 +18,15 @@
 
 
 .nav-bar {
+  min-width: 1000px;
+  background-color: #00e673;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   padding: 1rem 2rem;
-  background-color: #000000;
-  color: #ffffff;
-  opacity: 60%;
+  opacity: 80%;
+  margin: 0;
+  align-items: center;
 }
 
 .nav-bar ul {
