--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,16 +1,13 @@
 .App {
   text-align: center;
+  justify-content: center;
 }
 
-body {
+/* body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-}
-
-.nav-bar {
-  
-}
+} */
 
 .App-link {
   color: #61dafb;
@@ -18,13 +15,13 @@ body {
 
 
 .nav-bar {
-  min-width: 1000px;
+  min-width: 100%;
   background-color: #00e673;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 1rem 2rem;
-  opacity: 80%;
+  padding-left: 1rem;
+  opacity: 60%;
   margin: 0;
   align-items: center;
 }
@@ -41,6 +38,7 @@ body {
 .nav-bar a {
   text-decoration: none;
   color: #ffffff;
+  padding-right: 3rem;
 }
 .nav-bar a:hover {
   text-decoration: underline;
