--- a/frontend/src/pages/AdminDasboard/AdminDashboard.css
+++ b/frontend/src/pages/AdminDasboard/AdminDashboard.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     margin: 0;
@@ -7,7 +7,7 @@ body {
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-}
+} */
 
 .admin-home-container {
     background-color: #fff;
