--- a/frontend/src/pages/forms/student/StudentForm.css
+++ b/frontend/src/pages/forms/student/StudentForm.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
     margin: 0;
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-}
+} */
 
 .form-container {
     background-color: #ffffff;
