--- a/frontend/src/pages/forms/room/RoomForm.css
+++ b/frontend/src/pages/forms/room/RoomForm.css
@@ -1,19 +1,14 @@
-/* body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-} */
-
-.form-container {
+.form-container-room {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+form{
     width: 400px;
 }
 
@@ -28,7 +23,7 @@ label {
     margin-bottom: 5px;
 }
 
-input {
+input, select {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
