--- a/frontend/src/pages/AdminDasboard/AdminDashboard.css
+++ b/frontend/src/pages/AdminDasboard/AdminDashboard.css
@@ -10,62 +10,65 @@
 } */
 
 .admin-home-container {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    text-align: center;
-    width: 100%;
-    height: 100%;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .admin-title {
-    font-size: 24px;
-    margin-bottom: 20px;
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
 .admin-buttons {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 10px;
-    margin-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 10px;
+  margin-top: 20px;
 }
 
 .admin-buttons-column {
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    gap: 10px;
-    margin-top: 20px;
-    justify-content: space-evenly;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 10px;
+  margin-top: 20px;
+  justify-content: space-evenly;
 }
 
 .admin-buttons-half {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    margin-top: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  margin-top: 20px;
 }
 
 .admin-button {
-    padding: 15px;
-    color: #000;
-    background-color: #fff;
-    border: 2px solid transparent;
-    border-radius: 8px;
-    text-decoration: none;
-    font-weight: bold;
-    text-align: center;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
-    width: 150px;
-    border-color: #000;
+  padding: 15px;
+  color: #000;
+  background-color: #fff;
+  border: 2px solid transparent;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  text-align: center;
+  cursor: pointer;
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease,
+    border-color 0.3s ease;
+  width: 150px;
+  border-color: #000;
 }
 
 .admin-button:hover {
-    background-color: #34495e;
-    color: #fff;
-    border-color: #34495e;
+  background-color: #34495e;
+  color: #fff;
+  border-color: #34495e;
 }
 .last-button {
-    padding-top: 80px;
+  padding-top: 80px;
 }
